change logo position

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 3000
-ATLAS_URI = "mongodb+srv://abhay2342:abhay2342@mr-anon-cluster.xcb8fkw.mongodb.net/"
+ATLAS_URI = "mongodb+srv://kumar-abhi001:bEWA6nzQZQogAVuL@abhishekclustor.escefr2.mongodb.net/"
